add useful links

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -11,6 +11,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Useful websites\n",
+    "* https://neuraldatascience.io/8-mri/nifti.html\n",
+    "* https://lukas-snoek.com/NI-edu/fMRI-introduction/week_1/python_for_mri.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Setup"
    ]
   },
