modifying the experimental notebooks

--- a/experiments/model_comparison.ipynb
+++ b/experiments/model_comparison.ipynb
@@ -963,6 +963,53 @@
     "segmentation, uncertainty_map = get_ensemble_segmentation(models, img, roi)\n",
     "plot_segmentation_with_uncertainty(img, label, segmentation, uncertainty_map, slice_num)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['probabilities']\n",
+      "[0.0000000e+00 4.2508918e-14 4.3516989e-14 ... 9.9999976e-01 9.9999988e-01\n",
+      " 1.0000000e+00]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np \n",
+    "\n",
+    "npz_file_path = f\"/home/agata/Desktop/thesis_tumor_segmentation/nnUNet/nnUNet_predictions/segmentations100/BraTS2021_00005.npz\"\n",
+    "# Load the softmax probabilities from the .npz file\n",
+    "nnunet_data = np.load(npz_file_path)\n",
+    "print(list(nnunet_data.keys()))\n",
+    "print(np.unique(nnunet_data['probabilities']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'sitk_stuff': {'spacing': (1.0, 1.0, 1.0), 'origin': (-0.0, -239.0, 0.0), 'direction': (1.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0)}, 'spacing': [1.0, 1.0, 1.0], 'shape_before_cropping': (155, 240, 240), 'bbox_used_for_cropping': [[4, 150], [40, 211], [52, 188]], 'shape_after_cropping_and_before_resampling': (146, 171, 136)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "with open('/home/agata/Desktop/thesis_tumor_segmentation/nnUNet/nnUNet_predictions/segmentations100/BraTS2021_00000.pkl', 'rb') as f:\n",
+    "    metadata = pickle.load(f)\n",
+    "\n",
+    "print(metadata)\n"
+   ]
   }
  ],
  "metadata": {
