check class distribution

--- a/experiments/check_class_distribution.ipynb
+++ b/experiments/check_class_distribution.ipynb
@@ -78,6 +78,87 @@
     "    percentage = (count / total_voxels) * 100\n",
     "    print(f'Class {cls} percentage: {percentage:.2f}%')\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## No. patients with and without NCR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Participants with Whole Tumor (WT): 1251\n",
+      "Participants without Whole Tumor (WT): 0\n",
+      "Participants with Tumor Core (TC): 1245\n",
+      "Participants without Tumor Core (TC): 6\n",
+      "Participants with Enhancing Tumor (ET): 1218\n",
+      "Participants without Enhancing Tumor (ET): 33\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import nibabel as nib\n",
+    "import numpy as np\n",
+    "\n",
+    "# Define the path to your dataset (adjust as necessary)\n",
+    "segmentation_folder = '/home/agata/Desktop/thesis_tumor_segmentation/data/brats2021challenge/TrainingData'\n",
+    "\n",
+    "# Initialize counters\n",
+    "participants_with_wt = 0\n",
+    "participants_without_wt = 0\n",
+    "participants_with_tc = 0\n",
+    "participants_without_tc = 0\n",
+    "participants_with_et = 0\n",
+    "participants_without_et = 0\n",
+    "\n",
+    "for case_folder in os.listdir(segmentation_folder):\n",
+    "    case_path = os.path.join(segmentation_folder, case_folder)\n",
+    "    \n",
+    "    # Check if it's a folder\n",
+    "    if os.path.isdir(case_path):\n",
+    "        # Look for the segmentation file within the subfolder (ending with _seg.nii.gz)\n",
+    "        seg_file = os.path.join(case_path, f'{case_folder}_seg.nii.gz')\n",
+    "        \n",
+    "        # Check if the segmentation file exists\n",
+    "        if os.path.exists(seg_file):\n",
+    "            # Load the segmentation mask\n",
+    "            segmentation = nib.load(seg_file).get_fdata()\n",
+    "            \n",
+    "            # Check for Whole Tumor (WT): Presence of NCR (1), ED (2), or ET (4)\n",
+    "            if np.any((segmentation == 1) | (segmentation == 2) | (segmentation == 4)):\n",
+    "                participants_with_wt += 1\n",
+    "            else:\n",
+    "                participants_without_wt += 1\n",
+    "            \n",
+    "            # Check for Tumor Core (TC): Presence of NCR (1) or ET (4)\n",
+    "            if np.any((segmentation == 1) | (segmentation == 4)):\n",
+    "                participants_with_tc += 1\n",
+    "            else:\n",
+    "                participants_without_tc += 1\n",
+    "            \n",
+    "            # Check for Enhancing Tumor (ET): Presence of ET (4)\n",
+    "            if np.any(segmentation == 4):\n",
+    "                participants_with_et += 1\n",
+    "            else:\n",
+    "                participants_without_et += 1\n",
+    "\n",
+    "# Output the count of participants for each sub-region\n",
+    "print(f'Participants with Whole Tumor (WT): {participants_with_wt}')\n",
+    "print(f'Participants without Whole Tumor (WT): {participants_without_wt}')\n",
+    "print(f'Participants with Tumor Core (TC): {participants_with_tc}')\n",
+    "print(f'Participants without Tumor Core (TC): {participants_without_tc}')\n",
+    "print(f'Participants with Enhancing Tumor (ET): {participants_with_et}')\n",
+    "print(f'Participants without Enhancing Tumor (ET): {participants_without_et}')"
+   ]
   }
  ],
  "metadata": {
