Working on ensemble prediction

--- a/experiments/test_on_new_data.ipynb
+++ b/experiments/test_on_new_data.ipynb
@@ -1062,6 +1062,16 @@
     "# Show the slices\n",
     "show_slices([sagittal_slice, coronal_slice, axial_slice])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nibabel as nib \n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
